--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.11.0",
     "astro-icon": "^1.1.0",
+    "lucide": "^0.396.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@iconify-json/lucide": "^1.1.194"
   }
 }
