--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "@iconify-json/lucide": "^1.1.194"
+    "@iconify-json/lucide": "^1.1.194",
+    "@tailwindcss/typography": "^0.5.13"
   }
 }
